    - renamed dovecot-libsieve and dovecot-managesieve directories
      to libsieve and managesieve.
  * debian/rules: Moved the configuration of libsieve and managesieve from
    the build phase to the configuration phase

  [ Jaldhar H. Vyas ]
  * Added dovecot-dbg package  with debugging symbols.  Thanks Stephan Bosch.
    (Closes: #554710)

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Mon, 23 Nov 2009 10:41:29 -0500

dovecot (1:1.2.7-1) unstable; urgency=low

  * New upstream release.
  * debian/dovecot-common.init:
    - use $CONF when starting the daemon. (Closes: #549944)
    - always output start/stop messages. (Closes: #523810)

 -- Fabio Tranchitella <kobold@debian.org>  Sat, 14 Nov 2009 11:28:33 +0100

dovecot (1:1.2.6-1) unstable; urgency=low

  * New upstream relese.
  * debian/patches/v1.2.5-exec-mail_fix.dpatch: removed, merged upstream.

 -- Fabio Tranchitella <kobold@debian.org>  Mon, 12 Oct 2009 06:56:55 +0000

dovecot (1:1.2.5-2) unstable; urgency=low

  * debian/dpatches/v1.2.5-exec-mail_fix.dpatch: added.
    (Closes: #546694, #546695)
  * debian/dovecot-common.dirs: removed /etc, /etc/ssl/{private,certs}, they
    are handled by openssl; this should fix the piuparts test.

 -- Fabio Tranchitella <kobold@debian.org>  Sun, 27 Sep 2009 20:53:52 +0200

dovecot (1:1.2.5-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Mon, 14 Sep 2009 14:34:06 +0200

dovecot (1:1.2.4-2) unstable; urgency=low

  * debian/patches/dovecot-libsieve.dpatch: updated to 0.1.12.
    (Closes: #539527)

 -- Fabio Tranchitella <kobold@debian.org>  Wed, 02 Sep 2009 07:28:23 +0200

dovecot (1:1.2.4-1) unstable; urgency=low

  * New upstream release. (Closes: #537186, #540058)
  * Bumped Standards-Version to 3.8.3, no changes needed.
  * debian/control: only suggests ntp. (Closes: #542152)
  * debian/patches/dovecot-managesieve-dist.dpatch: updated to the 0.11.9
    release. (Closes: #539527)