@@ -20,8 +20,9 @@ dovecot (1:1.2.8-1) UNRELEASED; urgency=high
   [ Jaldhar H. Vyas ]
   * Added dovecot-dbg package  with debugging symbols.  Thanks Stephan Bosch.
     (Closes: #554710)
+  * Fixed some stray libexec'isms in the default configuration.
 
- -- Jaldhar H. Vyas <jaldhar@debian.org>  Mon, 23 Nov 2009 10:41:29 -0500
+ -- Jaldhar H. Vyas <jaldhar@debian.org>  Mon, 23 Nov 2009 16:24:07 -0500
 
 dovecot (1:1.2.7-1) unstable; urgency=low
 
